# django-select2

./: .checks.yml  .editorconfig  .fussyfox.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  Internal_Notes.md  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  UK_Advanced_Cryptics_Dictionary_Licensing_Information.txt  package.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  requirements_dev.in  requirements_dev.txt  runtests.py  set_version.py  setup.cfg  setup.py  setup.py.bak  test.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_owner.md  problem-with-django-admin.md  question.md
.github/workflows/: ci.yml  release.yml
django_select2/: __init__.py  __init__.py~  admin.py  apps.py  cache.py  conf.py  db_client.py  fields.py  forms.py  media.py  memcache_client.py  memcache_wrapped_db_client.py  memcache_wrapped_db_client.py.bak  models.py  models.py.bak  types.py  urls.py  util.py  util.py.bak  views.py  views.py.bak  widgets.py  widgets.py.bak
django_select2/migrations/: 0001_initial.py
django_select2/static/css/: all-bootstrapped.min.css  all.min.css  extra.css  select2.min.css
django_select2/static/django_select2/: django_select2.js  django_select2_RelatedObjectLookups_fix.js  django_select2_formset_handlers.js
django_select2/static/django_select2/css/: all-bootstrapped.min.css  all.min.css  extra.css  select2-bootstrap.css  select2-bootstrap.min.css  select2-bootstrapped.min.css  select2.min.css
django_select2/static/django_select2/js/: heavy_data.min.js
django_select2/static/js/: heavy_data.js  heavy_data.min.js  select2.js  select2.min.js  store.js
django_select2/templatetags/: django_select2_tags.py  django_select2_tags.py.bak  ui.py
docs/: Makefile  conf.py  developers.rst  django_select2.rst  external_req.txt  extra.rst  get_started.rst  index.rst  make.bat  overview.rst  ref_fields.rst  ref_util.rst  ref_views.rst  ref_widgets.rst  spelling_wordlist.txt
docs/_build/doctrees/: environment.pickle  get_started.doctree  index.doctree  overview.doctree  ref_fields.doctree  ref_util.doctree  ref_views.doctree  ref_widgets.doctree  reference.doctree
docs/_build/html/: .buildinfo  genindex.html  get_started.html  index.html  objects.inv  overview.html  py-modindex.html  ref_fields.html  ref_util.html  ref_views.html  ref_widgets.html  reference.html  search.html  searchindex.js
docs/_build/html/_images/: inheritance-0888154528d7782c483cc0100d85148fc615fb52.png.map  inheritance-0ab22635cc4afe0e66bb57daa3bca5e21e9efc32.png.map  inheritance-0ed5eac8be8ee407d801dd8609e167f271419061.png.map  inheritance-0fe96ccf16c58c03ff780d0e9ebd6497cf928cf5.png.map  inheritance-13782e5f674c6b31f4c4c1b27e4a0349bdac7cc8.png.map  inheritance-1914418b1c10c8c495484ce6bfb897f7906b0db1.png.map  inheritance-2164c944f987a402377592ef8e94339399e0d585.png.map  inheritance-226e89d7da8304ffcc884462a1620b9e4209ee59.png.map  inheritance-271ecefe519ab8c83b97b2f742abdd0e2ea4d6b8.png.map  inheritance-27b49323b684cf16593a89175e9e38b137995625.png.map  inheritance-29d2cd62239c7e2dbb071d333ef9680edfb0c886.png.map  inheritance-2a5d737bd98b0ddb0f26a84b32e0bab0307aa8a1.png.map  inheritance-33c09aa571160e654cfd73c711c0d2cfac17a52c.png.map  inheritance-35430962092033b45a0c23fd3b8b115d541cab0d.png.map  inheritance-36daab49567a54c564ce8bc37d5130439990f62c.png.map  inheritance-3dba8eda1cfa0dd0c3f1349191fc0c989ea4a33d.png.map  inheritance-3ef5ce950030c171e36826075ec800f66ce93ee7.png.map  inheritance-40875bc11940c51ab1e2c2bb4743594a8cb3b7f5.png.map  inheritance-4b1a99e9d2dfbf428aa5f8e9674107fb97e1faaa.png.map  inheritance-4b1d6b10ca70d06ff3bdaedfdeb0f490271ab780.png.map  inheritance-53de5bc32ecd93d09a06994c473f76aeab86e5ad.png.map  inheritance-54e588202ed88a2b9c00b471d13f401a1f0ebb3d.png.map  inheritance-5981529b209622dee66229aa31294b55547bb67c.png.map  inheritance-60c0f4eeee4e5f3593cfeed497d273404a97aa93.png.map  inheritance-65ed7ad2310dd4e29851de30967ff5ed457c4a10.png.map  inheritance-66afdd93430a8b1be49f9873b66f850c3dca7a88.png.map  inheritance-676f84c1a27aab36cb8e4fde468c716a97821cfa.png.map  inheritance-678260b7e4ffe565d2819040ab9288f2db3eeb5b.png.map  inheritance-6a5b4ad122bee1a2199e3c0d4aa4992c54789bfb.png.map  inheritance-6d23c44f84c71d1c23cf34b95e2c63d439c048c2.png.map  inheritance-6f19a469062fa73583c7d2fdad16eafccd1e7b66.png.map  inheritance-73a77eaa83e52671ed86f568bd3bda807cd84e60.png.map  inheritance-77ac6ebe1e23d3e6f8718b3c8728e4f74b8eaf3d.png.map  inheritance-7cb721efe98746431d2da0d92fec400d9ec3890d.png.map  inheritance-823262ddd33fce15a8879347eec4ff5ea79ce5e3.png.map  inheritance-82a034d6e9b0c9baa16a6576149f78dc2ab2f6b5.png.map  inheritance-86cc40a0c548b7cf742a0872dba75221b0f249e4.png.map  inheritance-882b6039211cfb019a78eb35637fefe1f26f6259.png.map  inheritance-88dec5533f5bfed5f1c78156107e6abfdec33433.png.map  inheritance-8f17d61a77d03c5938c6143e9355f9be775f4562.png.map  (+24 more)
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: get_started.txt  index.txt  overview.txt  ref_util.txt  ref_views.txt  ref_widgets.txt  (+1 more)
example/: README.md  requirements.txt
example/example/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/example/migrations/: 0001_initial.py
testapp/: test.db
testapp/testapp/: settings.py  urls.py  wsgi.py
testapp/testapp/templates/: 500.html  form.html  formget.html  index.html  list.html
testapp/testapp/testmain/: admin.py  fields.py  forms.py  models.py  models.py.bak  urls.py  views.py
testapp/testmain/: forms.py  models.py  urls.py  views.py
testapp/testmain/fixtures/: initial_data.json
tests/: __init__.py  conftest.py  test_admin.py  test_cache.py  test_fields.py  test_forms.py  test_views.py  test_widgets.py
tests/testapp/: fixtures.json  forms.py  models.py  settings.py  urls.py  views.py
tests/testapp/forms/: __init__.py  fields.py
tests/testapp/templates/: form.html  formset.html
(+5 files in other folders)
