[metadata]
name = django-select2
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Select2 option fields for Django
long_description = file: README.rst
url = https://github.com/applegrew/django-select2
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2.0
    django-appconf>=0.6.0
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django
    selenium

[bdist_wheel]
universal = 1

[bdist_rpm]
requires =
    python-django-appconf >= 2.0
    python-django-appconf >= 0.6

[aliases]
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
project = Django-Select2
copyright = 2017 Johannes Hoppe

[tool:pytest]
addopts = --cov=django_select2 --cov-report xml
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[tox:tox]
envlist = py{35,36,37}-dj{22,21,20,master},docs

[testenv]
passenv=CI
deps =
    dj20: https://github.com/django/django/archive/stable/2.0.x.tar.gz#egg=django
    dj21: https://github.com/django/django/archive/stable/2.1.x.tar.gz#egg=django
    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
commands = python setup.py test

[testenv:docs]
commands = python setup.py build_sphinx -W -b doctest -b html

[flake8]
max-line-length = 120
statistics = true
show-source = true

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
multi_line_output = 5
line_length = 79
known_first_party = django_select2, tests
default_section=THIRDPARTY
combine_as_imports = true
