[metadata]
name = django-select2
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Select2 option fields for Django
long_description = file: README.rst
url = https://github.com/codingjoe/django-select2
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

[options]
include_package_data = True
packages = django_select2
install_requires =
    django>=2.2
    django-appconf>=0.6.0
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django
    selenium

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django
    selenium

[bdist_wheel]
universal = 1

[bdist_rpm]
requires =
    python-django-appconf >= 2.0
    python-django-appconf >= 0.6

[aliases]
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts =
    tests
    --doctest-glob='*.rst'
    --doctest-modules
    --cov=django_select2
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = venv,.tox,.eggs

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
known_first_party = django_select2, tests
default_section = THIRDPARTY
combine_as_imports = true
